...
          ),
        ],
      ),
      actions: [
        TextButton(
          onPressed: () {},
          child: const Text('Masuk', style: TextStyle(color: Colors.white)),
        ),
        Padding(
          padding: const EdgeInsets.only(right: 16.0, top: 8, bottom: 8),
          child: ElevatedButton(
            style: ElevatedButton.styleFrom(
              backgroundColor: const Color(0xFFF97316),
...
            textField: true,
            child: TextField(
              key: const Key('emailField'),
              controller: emailCtrl,
              keyboardType: TextInputType.emailAddress,
              textInputAction: TextInputAction.next,
              decoration: const InputDecoration(hintText: 'email@contoh.com / username'),
            ),
          ),
          const SizedBox(height: 16),
          const Text('Password', style: TextStyle(fontSize: 14, fontWeight: FontWeight.w500)),
          const SizedBox(height: 4),
          Semantics(
...
